--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@octokit/auth-token": "^5.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0",
     "octokit": "^3.1.2"
   }
