--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.3",
+    "next-auth": "^4.24.7",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0",
     "octokit": "^3.1.2",
